# Maya-Soft-Body-Simulation

./: .gitignore  README.md  SoftBodySimulation.mb
SoftBodySimulationPlugin/: .gitignore  README.md
SoftBodySimulationPlugin/cmake/Modules/: FindMaya.cmake
SoftBodySimulationPlugin/include/: ParticleSystem.h  SoftBodyDeformerNode.h  SoftBodySimulationPlugin.h  Test.h
SoftBodySimulationPlugin/scripts/: render.mel  testScene01.mel  testScene02.mel  testScene03.mel  testScript.mel
SoftBodySimulationPlugin/src/: ParticleSystem.cpp  SoftBodyDeformerNode.cpp  SoftBodySimulationPlugin.cpp  Test.cpp
SoftBodySimulationPlugin/src/gammal/: SoftBodySimulationPlugin.cpp
TestPluginMaya/: .gitignore  CMakeLists.txt
TestPluginMaya/build1/: CMakeCache.txt  Makefile  cmake_install.cmake
TestPluginMaya/build1/src/: Makefile  cmake_install.cmake  testPluginMaya2.bundle
TestPluginMaya/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
TestPluginMaya/build2/src/: Makefile  cmake_install.cmake  testPluginMaya2.bundle
TestPluginMaya/modules/: FindMaya.cmake
TestPluginMaya/src/: BlendNode.cpp  BlendNode.h  CMakeLists.txt  HelloWorld.cpp
